monticore-generator/src/test/resources/cocos/invalid/A4029/A4029.mc4
package cocos.invalid.A4029;

grammar A4029 {
  A;

  B extends A astextends C;

}